--- a/Results.tex
+++ b/Results.tex
@@ -26,7 +26,7 @@ One of RecBCD's purposes when processing a DSB is to facilitate the loading of t
 
 \begin{figure*}[htbp]
     \centering
-    \includegraphics[width=.8\textwidth]{Figures/Fig2_cipro_nSpots.pdf}
+    \includegraphics[width=.8\textwidth]{Figures/Fig2_RecB_binding.pdf}
     \caption{RecB DNA binding under ciprofloxacin exposure. \textbf{(A)} Example kymographs of RecB throughout an acquisition. A short timelapse (100 sec) is acquired at a different position every 2 min for 75 min. \textbf{(B)} RecB spot lifetime histograms at 3, 10, 20 and 30 ng/mL ciprofloxacin (bars), fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). \textbf{(C)} RecB spot lifetime histograms for cells over-expressing the Gam protein, under 0 or 30 ng/mL ciprofloxacin (bars), fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). \textbf{(D)} Proportion of RecB spots that are shorter than a given lifetime, for cells over-expressing the Gam protein. Black dots show individal datasets, the black line is the average between them, and the red dashed line shows the smallest lifetime at which 95\% of RecB spots are shorter.}
     \label{Fig:lifetime_fits}
 \end{figure*}
@@ -82,7 +82,7 @@ Whereas the lifetime of the fluorescent spots informs us on how long RecB stays 
 
 \begin{figure*}[htbp]
     \centering
-    \includegraphics[width=.8\textwidth]{Figures/Fig4_cipro_30ngmL.pdf}
+    \includegraphics[width=.8\textwidth]{Figures/Fig3_cell_response.pdf}
     \caption{Bacterial cell response to the induction of DSBs by ciprofloxacin. \textbf{(A)} Representative images of cells containing different RecA structures (diffuse fluorescence, foci or filaments) after 60 minutes of exposure to ciprofloxacin. Arrows point to representative examples of each of these structures. \textbf{(B)} Proportion of cells containing RecA foci or filaments. Black dots represent individual datasets, and bars the average between them. \textbf{(C)} Representative images of cells (segmented outline in gray) showing the nucleoid (green) and RecB-associated fluorescence (magenta). RecB spots (indicated by arrows) are located in close proximity to the nucleoid. \textbf{(D)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis, for different ciprofloxacin concentrations (0 to 30 ng/mL)}
     \label{Fig:reca_nucleoid}
 \end{figure*}
@@ -108,13 +108,13 @@ Upon exposure to ciprofloxacin, cells undergoing DSB repair load RecA at the bre
 
 \begin{figure*}[htbp]
     \centering
-    \includegraphics[width=.8\textwidth]{Figures/Fig5_mutants.pdf}
+    \includegraphics[width=.8\textwidth]{Figures/Fig4_mutants.pdf}
     \caption{RecB binding to DNA (RecB spots with lifetime $>$10 sec) in the \dreca\ and \teneighty\ mutant strains. \textbf{(A)} Number of long-lived DNA-bound RecB per cell area. Black dots represent individual datasets, and bars the average between them. \textbf{(B)} Position of long-lived DNA-bound RecB along the cell's long axis (normalised).}
     \label{Fig:mutants}
 \end{figure*}
 
 %% Fitting spot lifetime histograms with bi-exponential model
-To better understand the factors that contribute to the dissociation of RecB from the DNA, we imaged two different mutants (\dreca\ and \teneighty), in the presence or absence of 30 ng/mL ciprofloxacin. Similarly to the WT, we computed histograms of RecB spot lifetimes, and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the slower rate, corresponding to the dissociation of DNA-bound RecB molecules. The corresponding lifetimes for DNA-bound RecB are shown on Figure \ref{Fig:mutants}A.
+To better understand the factors that contribute to the dissociation of RecB from the DNA, we imaged two different mutants (\dreca\ and \teneighty), in the presence or absence of 30 ng/mL ciprofloxacin. As for the wild-type (WT) strain, we computed histograms of RecB spot lifetimes, and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the slower rate, corresponding to the dissociation of DNA-bound RecB molecules. The corresponding lifetimes for DNA-bound RecB are shown on Figure \ref{Fig:mutants}A.
 
 %%% drecA
 
