Added DL to acknowledgements

--- a/Article.tex
+++ b/Article.tex
@@ -55,7 +55,7 @@ meriem.elkaroui\at ed.ac.uk
 
 
 \begin{acknowledgements}
-Acknowledgements
+- David Leach for insightful discussions
 \end{acknowledgements}
 
 \section*{Bibliography}
