Finished section on mutants RecB recruitment rates

--- a/Results.tex
+++ b/Results.tex
@@ -120,16 +120,15 @@ As for the wild-type (WT) strain, we computed histograms of RecB spot lifetimes,
 
 %% RecB recruitment rate
 %%% Higher RecB recruitment in ΔrecA due to re-recruitment to the same breaks
-Estimating the recruitment rate of RecB to the DNA provided additional insight into the dynamics of DSB processing in the \dreca\ and \teneighty\ mutants. In the \dreca\ mutant, the rate of recruitment of RecB is increased compared to wild-type cells, both in the presence and absence of ciprofloxacin. As in both cases the rate of DSB formation is expected to be the same between the wild-type and the \dreca\ mutant, we can hypothesise that this higher rate of RecB recruitment to DNA is due to multiple recruitment events on the same original DSB. In the mutant cells, RecBCD processes the DNA, but the generated ssDNA cannot be coated with the RecA protein, and is therefore likely to be degraded by cellular endo- and exonucleases such as XXX (give examples). Degradation of the ssDNA would lead to a blunting of the DNA end, hence creating a new substrate for RecBCD binding. This deleterious cycle was previously reported to occur in cells lacking the RecA protein, eventually leading to full chromosome digestion (find and add ref).
+Estimating the recruitment rate of RecB to the DNA provided additional insight into the dynamics of DSB processing in the \dreca\ and \teneighty\ mutants. In the \dreca\ mutant, the rate of recruitment of RecB is increased compared to wild-type cells, both in the presence and absence of ciprofloxacin. As in both cases the rate of DSB formation is expected to be the same between the wild-type and the \dreca\ mutant, we can hypothesise that this higher rate of RecB recruitment to DNA is due to multiple recruitment events on the same original DSB. In the mutant cells, RecBCD processes the DNA, but the generated ssDNA cannot be coated with the RecA protein, and is therefore likely to be degraded by cellular endo- and exonucleases such as SbcCD. Degradation of the ssDNA would lead to a blunting of the DNA end, hence creating a new substrate for RecBCD binding. This deleterious cycle was previously reported to occur in cells lacking the RecA protein, eventually leading to full chromosome digestion (find and add ref). In our experiment, it results in multiple recruitments of RecB to DNA for each DSB.
 
 %%% Intermediate recruitment in 1080 compared to WT and ΔrecA, probably resulting from a competition between ssDNA degradation + RecB reloading, and RecA loading + repair
-
-
+In the \teneighty\ mutant, RecB recruitment is higher than in WT cells, but equivalent (in the absence of ciprofloxacin) or lower (in the presence of 30 ng/mL ciprofloxacin) to the level of RecB recruitment in the \dreca\ mutant. Upon DSB recognition, \teneighty\ unwinds DNA without digesting it, and dissociates $\sim$2 times slower than wild-type RecB. After RecBCD dissociation, we expect two competing pathways to take place. Either (i) the unwound ssDNA is digested by cellular endo- and exonucleases, creating a new RecBCD substrate; or (ii) RecOR displaces the SSB (Single-Strand DNA-Binding) protein and promotes RecA loading, allowing DNA repair by homologous recombination to proceed. As a result, RecB can be recruited on DNA several times for each DSB (similarly to the \dreca\ mutant), but the cycle of re-recruitment can be broken by the action of RecOR. Figure \ref{Fig:pathways} shows RecBCD activity in wild-type cells, and the alternative pathways leading to RecB re-recruitment in the \dreca\ and \teneighty\ mutants.
 
 \begin{figure*}[htbp]
     \centering
     \includegraphics[width=\textwidth]{Figures/Fig_mutants_pathways.pdf}
-    \caption{}
+    \caption{RecBCD loading pathways in wild-type \emph{E. coli}, \dreca\ and \teneighty\ mutants. \textbf{(Wild-type)} After DSB recognition, RecBCD degrades DNA until it recognises a Chi-site. It switches activity to create a 3' ssDNA overhang, and promotes RecA loading. The RecA-coated ssDNA can then be used for DNA repair by homologous recombination. \textbf{($\mathbf{\Delta}$reca)} In the absence of RecA, the 3' ssDNA is coated by SSB, and eventually digested by cell nucleases. Blunting of the DNA end by digestion of the ssDNA creates a new substrate for binding of RecBCD. \textbf{(RecB$\mathbf{_{1080}}$)} Following DSB recognition, \teneighty\ unwinds DNA without digesting it. The unwound ssDNA can either be digested by nucleases, leading to a new blunt dsDNA end and RecBCD re-recruitment; or the RecOR complex can displace SSB to load RecA, allowing DNA repair by homologous recombination to proceed.}
     \label{Fig:pathways}
 \end{figure*}
 
