Added Jean's references for methods

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -764,3 +764,36 @@ The authors have declared no competing interest.},
    url = {https://cir.nii.ac.jp/crid/1370567187454221059},
    year = {1979},
 }
+@article{Ollion2021,
+   abstract = {We propose a novel self-supervised image blind denoising approach in which two neural networks jointly predict the clean signal and infer the noise distribution. Assuming that the noisy observations are independent conditionally to the signal, the networks can be jointly trained without clean training data. Therefore, our approach is particularly relevant for biomedical image denoising where the noise is difficult to model precisely and clean training data are usually unavailable. Our method significantly outperforms current state-of-the-art self-supervised blind denoising algorithms, on six publicly available biomedical image datasets. We also show empirically with synthetic noisy data that our model captures the noise distribution efficiently. Finally, the described framework is simple, lightweight and computationally efficient, making it useful in practical cases.},
+   author = {Jean Ollion and Charles Ollion and Elisabeth Gassiat and Luc Lehéricy and Sylvain Le Corff and Laboratoire J A Dieudonné},
+   journal = {arxiv},
+   month = {2},
+   title = {Joint self-supervised blind denoising and noise estimation},
+   url = {https://arxiv.org/abs/2102.08023v1},
+   year = {2021},
+}
+@article{Kobayashi2020,
+   abstract = {We propose a general framework for solving inverse problems in the presence of noise that requires no signal prior, no noise estimate, and no clean training data. We only require that the forward model be available and that the noise be statistically independent across measurement dimensions. We build upon the theory of "J-invariant" functions (Batson & Royer, 2019) and show how self-supervised denoising la Noise2Self is a special case of learning a noise-tolerant pseudo-inverse of the identity. We demonstrate our approach by showing how a convolutional neural network can be taught in a self-supervised manner to deconvolve images and surpass in image quality classical inversion schemes such as Lucy-Richardson deconvolution.},
+   author = {Hirofumi Kobayashi and Ahmet Can Solak and Joshua Batson and Loic A Royer},
+   journal = {arxiv},
+   title = {Image Deconvolution via Noise-Tolerant Self-Supervised Inversion},
+   year = {2020},
+}
+@article{Ollion2019,
+   abstract = {The analysis of bacteria at the single-cell level is essential to characterization of processes in which cellular heterogeneity plays an important role. BACMMAN (bacteria mother machine analysis) is a software allowing fast and reliable automated image analysis of high-throughput 2D or 3D time-series images from experiments using the ‘mother machine’, a very popular microfluidic device allowing biological processes in bacteria to be investigated at the single-cell level. Here, we describe how to use some of the BACMMAN features, including (i) segmentation and tracking of bacteria and intracellular fluorescent spots, (ii) visualization and editing of the results, (iii) configuration of the image-processing pipeline for different datasets and (iv) BACMMAN coupling to data analysis software for visualization and analysis of data subsets with specific properties. Among software specifically dedicated to the analysis of mother machine data, only BACMMAN allows segmentation and tracking of both bacteria and intracellular spots. For a single position, single channel with 1,000 frames (2-GB dataset), image processing takes ~6 min on a regular computer. Numerous implemented algorithms, easy configuration and high modularity ensure wide applicability of the BACMMAN software. BACMMAN software is used to automate image analysis of high-throughput 2D or 3D time-series images from experiments using the ‘mother machine’, a microfluidic device that allows growth and division of single bacterial cells to be followed.},
+   author = {Jean Ollion and Marina Elez and Lydia Robert},
+   doi = {10.1038/s41596-019-0216-9},
+   issn = {1750-2799},
+   issue = {11},
+   journal = {Nature Protocols 2019 14:11},
+   keywords = {Bioinformatics,Image processing,Software},
+   month = {9},
+   pages = {3144-3161},
+   pmid = {31554957},
+   publisher = {Nature Publishing Group},
+   title = {High-throughput detection and tracking of cells and intracellular spots in mother machine experiments},
+   volume = {14},
+   url = {https://www.nature.com/articles/s41596-019-0216-9},
+   year = {2019},
+}
