--- a/Article.tex
+++ b/Article.tex
@@ -56,6 +56,7 @@ meriem.elkaroui\at ed.ac.uk
 
 \begin{acknowledgements}
 - David Leach for insightful discussions
+- Jean for BACMMAN/software developments
 \end{acknowledgements}
 
 \section*{Bibliography}
