Edited last paragraph of mutants section

--- a/Results.tex
+++ b/Results.tex
@@ -132,10 +132,6 @@ In the \teneighty\ mutant, RecB recruitment is higher than in WT cells, but equi
     \label{Fig:pathways}
 \end{figure*}
 
-%% RecB spots in ΔrecA and/or 1080 background in the presence of ciprofloxacin are not centred as in WT (to be extended with sytox data)
-%%% In ΔrecA there is no centring and even a slight "exclusion" of spots from the centre of the cell. This confirms the involvement of the SOS response in RecB spot centring.
-Upon addition of high concentrations of ciprofloxacin (20-30 ng/mL) to wild-type cells, DNA-bound RecB molecules were mainly found in the centre of the cell (Figure \ref{Fig:reca_nucleoid}D), consistently with SOS-dependent compaction of the bacterial chromosome. In the \dreca\ mutant at 30 ng/mL ciprofloxacin, DNA-bound RecB were found throughout the cell, with a slightly lower density towards the centre (Figure \ref{Fig:mutants}B). This pattern is similar to what would be expected of a DNA-bound protein in the absence of chromosome compaction\cite{Stracy2021}. This observation reinforces the idea that the centring of DNA-bound RecB observed in the wild-type under high ciprofloxacin depends on the SOS response.
-
-%%% In 1080 there is no centring, but also no exclusion from the centre of the cell. This might correspond to a "mixed" population, where only a few spots get centred due to the delay in the SOS response
-Interestingly, in the \teneighty\ mutant a more even distribution of DNA-bound RecB is observed. The density of bound molecules is not reduced at the centre of the cell, as was observed in the \dreca\ mutant (Figure \ref{Fig:mutants}C). This could be attributed to a significantly delayed chromosome compaction, due to the largely reduced efficiency of RecA loading in the \teneighty\ mutant.
+%% RecB spots in ΔrecA and/or 1080 background in the presence of ciprofloxacin are not centred as in WT
+Upon addition of ciprofloxacin (30 ng/mL) to wild-type cells, the average nucleoid density changed from a bilobed distribution to a single peak, centred on the cell mid-point. This can be attributed to SOS-induced compaction of the bacterial nucleoid. DNA-bound RecB molecules followed the same spatial pattern, consistent with RecB being recruited to DSBs (Figure \ref{Fig:mutants}E). In the \dreca\ mutant, addition of 30 ng/mL ciprofloxacin did not change the spatial distribution of nucleoid density or DNA-bound RecB. This is consistent with \dreca\ cells being unable to induce the SOS response, and therefore not undergoing nucleoid compaction. In the \teneighty\ mutant, both nucleoid density and DNA-bound RecB distributions form a single peak at the cell centre. This is consistent with the \teneighty\ mutant having a high baseline of SOS induction, as we previously reported.\cite{Lepore2023}
 
